Remove -verify vm option when running tests